[gd_scene load_steps=13 format=2]

[ext_resource path="res://DATA/MISC/Main.gd" type="Script" id=1]
[ext_resource path="res://DATA/MISC/Ball.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://DATA/MISC/Running_Env.tres" type="Environment" id=3]
[ext_resource path="res://DATA/MISC/Panel.tres" type="PlaneMesh" id=4]
[ext_resource path="res://DATA/MATERIAL/Concrete.material" type="Material" id=5]
[ext_resource path="res://DATA/MATERIAL/Brick.material" type="Material" id=6]
[ext_resource path="res://DATA/MISC/Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://DATA/MATERIAL/ColorLimit_UI0X.material" type="Material" id=8]
[ext_resource path="res://DATA/MATERIAL/ColorLimit_UI0Y.material" type="Material" id=9]
[ext_resource path="res://DATA/MATERIAL/ColorLimit_UI1X.material" type="Material" id=10]
[ext_resource path="res://DATA/MATERIAL/ColorLimit_UI1Y.material" type="Material" id=11]
[ext_resource path="res://DATA/MATERIAL/ColorLimit.material" type="Material" id=12]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="L_Origin" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 0.0416668, -0.58337, 0.811137, -0.150644, 0.798893, 0.582302, -0.987709, -0.146456, -0.0545941, 0, 0, 0 )
visible = false

[node name="SpotLight" type="SpotLight" parent="L_Origin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
light_color = Color( 1, 1, 0.811765, 1 )
shadow_enabled = true
spot_range = 16.0
spot_angle = 30.0

[node name="Asset" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = null

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0 )
light_energy = 0.7
shadow_enabled = true
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.3

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.241845, 0.664463, 0, 0.939693, 0.34202, -0.707107, -0.241845, 0.664463, 2.54141, 1.27868, 2.54141 )
environment = ExtResource( 3 )
current = true
fov = 90.0

[node name="Scene" type="Spatial" parent="."]

[node name="Floor" type="MeshInstance" parent="Scene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="Floor2" type="MeshInstance" parent="Scene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 8 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="Floor3" type="MeshInstance" parent="Scene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -4, 8 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="Floor4" type="MeshInstance" parent="Scene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -4, 0 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="Wall0" type="MeshInstance" parent="Scene"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 2.38419e-007, -4 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Wall1" type="MeshInstance" parent="Scene"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 8, 2.38419e-007, -4 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Wall2" type="MeshInstance" parent="Scene"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 8, 8, -4 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Wall3" type="MeshInstance" parent="Scene"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 8, -4 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Wall4" type="MeshInstance" parent="Scene"]
transform = Transform( -4.37114e-008, 1, -4.37114e-008, 0, -4.37114e-008, -1, -1, -4.37114e-008, 1.91069e-015, -4, 2.38419e-007, 2.38419e-007 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Wall5" type="MeshInstance" parent="Scene"]
transform = Transform( -4.37114e-008, 1, -4.37114e-008, 0, -4.37114e-008, -1, -1, -4.37114e-008, 1.91069e-015, -4, 2.38419e-007, 8 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Wall6" type="MeshInstance" parent="Scene"]
transform = Transform( -4.37114e-008, 1, -4.37114e-008, 0, -4.37114e-008, -1, -1, -4.37114e-008, 1.91069e-015, -4, 8, 8 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="Wall7" type="MeshInstance" parent="Scene"]
transform = Transform( -4.37114e-008, 1, -4.37114e-008, 0, -4.37114e-008, -1, -1, -4.37114e-008, 1.91069e-015, -4, 8, 0 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 6 )

[node name="MainUI" type="CanvasLayer" parent="."]
layer = 10

[node name="Instructions" type="Label" parent="MainUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -77.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Left Click and drag to rotate model.
 spotlight.
Right Click and drag to rotate spotlight.
Middle Click to rotate the Sun."
align = 1
valign = 2

[node name="Box0" type="Control" parent="MainUI"]
anchor_right = 0.25
anchor_bottom = 1.0

[node name="Menu" type="Control" parent="MainUI/Box0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UI_BlurPassX" type="CanvasLayer" parent="MainUI/Box0/Menu"]

[node name="X" type="ColorRect" parent="MainUI/Box0/Menu/UI_BlurPassX"]
material = ExtResource( 8 )
anchor_right = 0.25
anchor_bottom = 1.0

[node name="UI_BlurPassY" type="CanvasLayer" parent="MainUI/Box0/Menu/UI_BlurPassX/X"]
layer = 2

[node name="Y" type="ColorRect" parent="MainUI/Box0/Menu/UI_BlurPassX/X/UI_BlurPassY"]
material = ExtResource( 9 )
anchor_right = 0.25
anchor_bottom = 1.0

[node name="Main" type="Control" parent="MainUI/Box0/Menu"]
anchor_right = 1.0
anchor_bottom = 0.2

[node name="Name" type="Label" parent="MainUI/Box0/Menu/Main"]
anchor_right = 1.0
anchor_bottom = 0.3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Retro
Model Viewer"
align = 1
valign = 1
autowrap = true

[node name="Buttons" type="VBoxContainer" parent="MainUI/Box0/Menu/Main"]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="SelModel" type="Button" parent="MainUI/Box0/Menu/Main/Buttons"]
margin_top = 1.0
margin_right = 256.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Select Model"
flat = true

[node name="Export" type="Button" parent="MainUI/Box0/Menu/Main/Buttons"]
margin_top = 28.0
margin_right = 256.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Export to .MESH"
flat = true

[node name="SelTexture" type="Button" parent="MainUI/Box0/Menu/Main/Buttons"]
margin_top = 55.0
margin_right = 256.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Select Texture"
flat = true

[node name="Exit" type="Button" parent="MainUI/Box0/Menu/Main/Buttons"]
margin_top = 82.0
margin_right = 256.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
action_mode = 0
text = "Exit"
flat = true

[node name="Box1" type="Control" parent="MainUI"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="Control" parent="MainUI/Box1"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UI_BlurPassX" type="CanvasLayer" parent="MainUI/Box1/Menu"]
editor/display_folded = true

[node name="X" type="ColorRect" parent="MainUI/Box1/Menu/UI_BlurPassX"]
material = ExtResource( 10 )
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UI_BlurPassY" type="CanvasLayer" parent="MainUI/Box1/Menu/UI_BlurPassX/X"]
layer = 2

[node name="Y" type="ColorRect" parent="MainUI/Box1/Menu/UI_BlurPassX/X/UI_BlurPassY"]
material = ExtResource( 11 )
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Toggles" type="VBoxContainer" parent="MainUI/Box1/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Spotlight_Tog" type="CheckBox" parent="MainUI/Box1/Menu/Toggles"]
margin_right = 256.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Spotlight"
align = 1

[node name="Reset_Scene" type="Button" parent="MainUI/Box1/Menu/Toggles"]
margin_top = 29.0
margin_right = 256.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Reset Scene"
flat = true

[node name="ScaleLabel" type="Label" parent="MainUI/Box1/Menu/Toggles"]
margin_top = 56.0
margin_right = 256.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Model Scale"
align = 1
valign = 1

[node name="ModelScale" type="HSlider" parent="MainUI/Box1/Menu/Toggles"]
margin_top = 77.0
margin_right = 256.0
margin_bottom = 93.0
max_value = 2.0
step = 0.001
value = 1.0
tick_count = 21
ticks_on_borders = true

[node name="ModelDialog" type="FileDialog" parent="MainUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 200.0
margin_right = -256.0
margin_bottom = -100.0
focus_mode = 1
popup_exclusive = true
window_title = "Select a 3D model to display"
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.obj ; 3D model" )
current_dir = "C:/Users/owner/Documents/GodotProjects/Zorph"
current_path = "C:/Users/owner/Documents/GodotProjects/Zorph/"

[node name="ExportDialog" type="FileDialog" parent="MainUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 200.0
margin_right = -256.0
margin_bottom = -100.0
focus_mode = 1
popup_exclusive = true
window_title = "Export a 3D .MESH file"
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.mesh ; Godot 3D model" )
current_dir = "C:/Users/owner/Documents/GodotProjects/Zorph"
current_file = "Example.mesh"
current_path = "C:/Users/owner/Documents/GodotProjects/Zorph/Example.mesh"

[node name="TextureDialog" type="FileDialog" parent="MainUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 200.0
margin_right = -256.0
margin_bottom = -100.0
focus_mode = 1
popup_exclusive = true
window_title = "Select a texture to display"
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.png ; Texture" )
current_dir = "C:/Users/owner/Documents/GodotProjects/Zorph"
current_path = "C:/Users/owner/Documents/GodotProjects/Zorph/"

[node name="Effect" type="CanvasLayer" parent="."]
layer = 0

[node name="Limit" type="ColorRect" parent="Effect"]
material = ExtResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="button_down" from="MainUI/Box0/Menu/Main/Buttons/SelModel" to="." method="_on_SelModel_button_down"]
[connection signal="button_down" from="MainUI/Box0/Menu/Main/Buttons/Export" to="." method="_on_Export_button_down"]
[connection signal="button_down" from="MainUI/Box0/Menu/Main/Buttons/SelTexture" to="." method="_on_SelTexture_button_down"]
[connection signal="button_down" from="MainUI/Box0/Menu/Main/Buttons/Exit" to="." method="_on_Exit_button_down"]
[connection signal="toggled" from="MainUI/Box1/Menu/Toggles/Spotlight_Tog" to="." method="_on_Spotlight_Tog_toggled"]
[connection signal="button_down" from="MainUI/Box1/Menu/Toggles/Reset_Scene" to="." method="_on_Reset_Scene_button_down"]
[connection signal="value_changed" from="MainUI/Box1/Menu/Toggles/ModelScale" to="." method="_on_ModelScale_value_changed"]
[connection signal="file_selected" from="MainUI/ModelDialog" to="." method="_on_ModelDialog_file_selected"]
[connection signal="file_selected" from="MainUI/ExportDialog" to="." method="_on_ExportDialog_file_selected"]
[connection signal="file_selected" from="MainUI/TextureDialog" to="." method="_on_TextureDialog_file_selected"]
